--- a/style.css
+++ b/style.css
@@ -2,100 +2,85 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: Poppins;
+  list-style: none;
 }
 
 .container {
-  max-width: 1190px;
-  padding: 0px 32px;
+  max-width: 1200px;
+  padding: 0 32px;
   margin: 0 auto;
 }
 
 nav {
-  background: transparent;
-  transition: all 0.5s;
-  background-size: cover;
   position: fixed;
-  top: 0;
-  z-index: 2;
   width: 100%;
 }
-nav .navbar {
+nav #nav-top {
+  padding-bottom: 10px;
+  padding-top: 10px;
+  background-color: transparent;
+  border-bottom: 1px gray solid;
+}
+nav #nav-top .nav-top {
   display: flex;
   justify-content: space-between;
-  gap: 60px;
+  align-items: center;
+  padding: 6px;
+  gap: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+nav #nav-top .nav-top .nav-top-icon {
+  display: flex;
+  gap: 20px;
+  color: white;
+  font-size: 14px;
+}
+nav #nav-top .nav-top h5 {
+  color: #fff;
+}
+nav #nav-bottom {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: transparent;
+}
+nav #nav-bottom .nav-main {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 100px;
+}
+nav #nav-bottom .nav-main .nav-ul {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  text-decoration: none;
+}
+nav #nav-bottom .nav-main .nav-ul a {
+  text-decoration: none;
+  color: white;
+}
+nav #nav-bottom .nav-main .nav-ul a:hover {
+  text-decoration: underline;
+}
+nav #nav-bottom .nav-main-icon ul {
+  display: flex;
+  gap: 20px;
   align-items: center;
 }
-nav .navbar .logo {
+nav #nav-bottom .nav-main-icon ul li {
+  color: white;
+}
+nav #nav-bottom .nav-bar {
+  display: none;
+  color: black;
   cursor: pointer;
-}
-nav .navbar .menu {
-  display: none;
-}
-nav .navbar ul {
-  display: flex;
-  list-style: none;
-  gap: 10px;
-}
-nav .navbar ul li {
-  padding: 20px 16px;
-  position: relative;
-}
-nav .navbar ul li a {
-  text-decoration: none;
-  color: whitesmoke;
-  font-size: 12px;
-}
-nav .navbar ul li i {
-  color: whitesmoke;
-  font-size: 12px;
-  margin-left: 5px;
-}
-nav .navbar ul li .blog-dropdown {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 200px;
-  background-color: whitesmoke;
-  padding: 10px;
-  display: none;
-  line-height: 1.625em;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-}
-nav .navbar ul li .blog-dropdown a {
-  display: block;
-  color: #333;
-  padding-bottom: 20px;
-}
-nav .navbar ul li:hover .blog-dropdown {
-  display: block;
-  transition: display 0.5s ease;
-}
-nav .navbar ul li .dropdown {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 200px;
-  background-color: whitesmoke;
-  padding: 15px;
-  display: none;
-  line-height: 1.625em;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-}
-nav .navbar ul li .dropdown a {
-  display: block;
-  color: #333;
-  padding-bottom: 20px;
-}
-nav .navbar ul li:hover .dropdown {
-  display: block;
-  transition: display 0.5s ease;
 }
 
 #banner {
-  padding-top: 150px;
-  padding-bottom: 100px;
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("header-bg.jpg.webp");
+  padding-top: 200px;
+  padding-bottom: 200px;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("images/header-bg.jpg.webp");
   background-size: cover;
 }
 #banner .banner {
