--- a/style.scss
+++ b/style.scss
@@ -1,121 +1,99 @@
-$main-color: black;
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: Poppins;
+    list-style: none;
 }
 
 .container {
-    max-width: 1190px;
-    padding: 0px 32px;
+    max-width: 1200px;
+    padding: 0 32px;
     margin: 0 auto;
 }
 
-nav {
-    background: transparent;
-    transition: all 0.5s;;
-    background-size: cover;
+nav{
     position: fixed;
-    top: 0;
-    z-index: 2;
     width: 100%;
-
-    .navbar {
-        display: flex;
-        justify-content: space-between;
-        gap: 60px;
-
-        align-items: center;
-
-        .logo {
-            cursor: pointer;
-        }
-
-        .menu {
-            display: none;
-        }
-
-        ul {
+    #nav-top {
+        padding-bottom: 10px;
+        padding-top: 10px;
+        background-color: transparent;
+        border-bottom: 1px gray solid;
+    
+        .nav-top {
             display: flex;
-            list-style: none;
-            gap: 10px;
-
-            li {
-                padding: 20px 16px;
-                position: relative;
-
+            justify-content: space-between;
+            align-items: center;
+            padding: 6px;
+            gap: 30px;
+            font-family: Arial, Helvetica, sans-serif;
+    
+            .nav-top-icon {
+                display: flex;
+                gap: 20px;
+                color: white;
+                font-size: 14px;
+            }
+    
+            h5 {
+                color: #fff;
+            }
+        }
+    }
+    
+    #nav-bottom {
+        padding-top: 20px;
+        padding-bottom: 20px;
+        background-color: transparent;
+    
+        .nav-main {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 100px;
+    
+    
+            .nav-ul {
+                display: flex;
+                gap: 20px;
+                align-items: center;
+                text-decoration: none;
+    
                 a {
                     text-decoration: none;
-                    color: whitesmoke;
-                    font-size: 12px;
-                }
-
-                i {
-                    color: whitesmoke;
-                    font-size: 12px;
-                    margin-left: 5px;
-                }
-
-                // Styles for Blog Dropdown
-                .blog-dropdown {
-                    position: absolute;
-                    top: 100%;
-                    left: 0;
-                    width: 200px;
-                    background-color: whitesmoke;
-                    padding: 10px;
-                    display: none;
-                    line-height: 1.625em;
-                    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-
-                    a {
-                        display: block;
-                        color: #333;
-                        padding-bottom: 20px;
+                    color: white;
+    
+                    &:hover {
+                        text-decoration: underline;
                     }
-
-                }
-
-                &:hover .blog-dropdown {
-                    display: block;
-                    transition: display 0.5s ease;
-                }
-
-                // Styles for Regular Dropdown
-                .dropdown {
-                    position: absolute;
-                    top: 100%;
-                    left: 0;
-                    width: 200px;
-                    background-color: whitesmoke;
-                    padding: 15px;
-                    display: none;
-                    line-height: 1.625em;
-
-                    a {
-                        display: block;
-                        color: #333;
-                        padding-bottom: 20px;
-                    }
-
-                    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
-                    0 3px 6px rgba(0, 0, 0, 0.23);
-                }
-
-                &:hover .dropdown {
-                    display: block;
-                    transition: display 0.5s ease;
                 }
             }
+        }
+    
+        .nav-main-icon {
+            ul {
+                display: flex;
+                gap: 20px;
+                align-items: center;
+    
+                li {
+                    color: white;
+                }
+            }
+        }
+    
+        .nav-bar {
+            display: none;
+            color: black;
+            cursor: pointer;
         }
     }
 }
 #banner {
-    padding-top: 150px;
-    padding-bottom: 100px;
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('header-bg.jpg.webp');
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('images/header-bg.jpg.webp');
     background-size: cover;
 
     .banner {
@@ -155,7 +133,7 @@ nav {
                 transition: all 0.8s ease;
 
                 &:hover {
-                    background-color: $main-color;
+                    background-color: black;
                     border: 1px solid yellow;
                     color: white;
                 }
