--- a/style.scss
+++ b/style.scss
@@ -124,6 +124,7 @@ nav{
                 margin-top: 20px;
                 background-color:#fab700 ;
                 cursor: pointer;
+                color: #fff;
                 padding: 10px 0;
                 padding-left: 30px;
                 padding-right: 30px;
@@ -140,6 +141,69 @@ nav{
             }
 
 
+        }
+    }
+}
+/* Eklediğiniz class için stiller */
+.scrolled {
+    background-color: rgba(0, 0, 0, 0.8);
+    /* Diğer stilleri ekleyin */
+}
+#services {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    text-align: center;
+
+    h1 {
+        font-size: 44px;
+    }
+
+    #p {
+        color: #777777;
+    }
+
+    .services {
+        display: flex;
+        gap: 30px;
+        margin-top: 100px;
+
+        .services-box {
+            padding: 30px;
+            background-color: #f9f9ff;
+            display: flex;
+            flex-direction: column;
+            transition: all 0.9s ease 0s;
+
+            &:hover {
+                background-color: orange;
+            }
+
+            .services-image {
+                width: 60%;
+
+                .img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+
+            .services-text {
+                width: 100%;
+
+                h2 {
+                    font-size: 1.2rem;
+                    color: #222222;
+                    margin-block-start: 0.83em;
+                    margin-block-end: 0.83em;
+                    margin-inline-start: 0px;
+                    margin-inline-end: 0px;
+                    font-weight: bold;
+                }
+
+                p {
+                    color: #777777;
+                }
+            }
         }
     }
 }
