--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
 nav {
   position: fixed;
   width: 100%;
+  z-index: 1000;
 }
 nav #nav-top {
   padding-bottom: 10px;
@@ -35,14 +36,15 @@ nav #nav-top .nav-top .nav-top-icon {
   display: flex;
   gap: 20px;
   color: white;
-  font-size: 14px;
+  font-size: 12px;
 }
-nav #nav-top .nav-top h5 {
+nav #nav-top .nav-top p {
   color: #fff;
+  font-size: 12px;
 }
 nav #nav-bottom {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   background-color: transparent;
 }
 nav #nav-bottom .nav-main {
@@ -60,9 +62,13 @@ nav #nav-bottom .nav-main .nav-ul {
 nav #nav-bottom .nav-main .nav-ul a {
   text-decoration: none;
   color: white;
+  font-size: 14px;
 }
 nav #nav-bottom .nav-main .nav-ul a:hover {
   text-decoration: underline;
+}
+nav #nav-bottom .nav-main .nav-menu {
+  display: none;
 }
 nav #nav-bottom .nav-main-icon ul {
   display: flex;
@@ -96,8 +102,8 @@ nav #nav-bottom .nav-bar {
   color: #fff;
 }
 #banner .banner .banner-text h1 {
-  font-size: 56px;
-  font-weight: 300;
+  font-size: 48px;
+  font-weight: 700;
   color: #fff;
 }
 #banner .banner .banner-text p {
@@ -137,7 +143,8 @@ nav #nav-bottom .nav-bar {
   text-align: center;
 }
 #services h1 {
-  font-size: 44px;
+  font-size: 36px;
+  color: #222222;
 }
 #services #p {
   color: #777777;
@@ -158,7 +165,7 @@ nav #nav-bottom .nav-bar {
   background-color: orange;
 }
 #services .services .services-box .services-image {
-  width: 60%;
+  width: 100%;
 }
 #services .services .services-box .services-image .img {
   width: 100%;
@@ -175,7 +182,296 @@ nav #nav-bottom .nav-bar {
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   font-weight: bold;
+  text-align: left;
 }
 #services .services .services-box .services-text p {
   color: #777777;
+  width: 100%;
+  text-align: left;
+}
+
+#features {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background-color: #f9f9ff;
+}
+#features h1 {
+  text-align: center;
+  font-size: 36px;
+}
+#features p {
+  text-align: center;
+  color: #777777;
+}
+#features .features {
+  margin-top: 50px;
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(3, 1fr);
+}
+#features .features .feature-box {
+  background-color: #fff;
+  padding: 20px;
+  transition: all 0.9s ease 0s;
+  cursor: pointer;
+}
+#features .features .feature-box:hover {
+  background-color: orange;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+#features .features .feature-box h2 {
+  font-size: 18px;
+  color: #222222;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  text-align: left;
+}
+#features .features .feature-box h2 i {
+  margin-right: 20px;
+}
+#features .features .feature-box p {
+  font-size: 14px;
+  text-align: left;
+}
+
+#latest {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background-color: #f9f9ff;
+}
+#latest h1 {
+  font-size: 36px;
+  text-align: center;
+}
+#latest #p3 {
+  margin: 0 auto;
+  text-align: center;
+  color: #777777;
+  font-size: 14px;
+  width: 50%;
+  margin-top: 10px;
+}
+#latest .latest {
+  margin-top: 80px;
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(4, 1fr);
+}
+#latest .latest .latest-box .latest-image {
+  overflow: hidden;
+}
+#latest .latest .latest-box .latest-image img {
+  transition: all 0.9s ease 0s;
+}
+#latest .latest .latest-box .latest-image:hover img {
+  transform: scale(1.2);
+}
+#latest .latest .latest-box .latest-btn {
+  background-color: black;
+  color: #777777;
+  border: none;
+  padding: 5px 20px;
+  margin-top: 10px;
+}
+#latest .latest .latest-box h2 {
+  font-size: 18px;
+  color: #222222;
+  margin-block-start: 0.7em;
+  margin-bottom: 12px;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  text-align: left;
+}
+#latest .latest .latest-box p {
+  font-size: 14px;
+  color: #777777;
+  margin-bottom: 15px;
+}
+#latest .latest .latest-box .latest-comment {
+  display: flex;
+  justify-content: space-between;
+}
+#latest .latest .latest-box .latest-comment i {
+  margin-right: 10px;
+}
+
+#footer {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background-color: #04091e;
+}
+#footer .footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 50px;
+  width: 100%;
+}
+#footer .footer .footer-box h2 {
+  padding-bottom: 10px;
+}
+#footer .footer .footer-box p {
+  padding-bottom: 10px;
+}
+#footer .footer .footer-box:nth-child(1) {
+  width: 50%;
+}
+#footer .footer .footer-box:nth-child(1) h2 {
+  color: #fff;
+  font-size: 18px;
+}
+#footer .footer .footer-box:nth-child(1) p {
+  color: #777777;
+  font-size: 14px;
+}
+#footer .footer .footer-box:nth-child(2) {
+  width: 40%;
+}
+#footer .footer .footer-box:nth-child(2) h2 {
+  color: #fff;
+  font-size: 18px;
+}
+#footer .footer .footer-box:nth-child(2) input {
+  width: 70%;
+}
+#footer .footer .footer-box:nth-child(2) button {
+  background-color: #fab700;
+  border: none;
+  color: #fff;
+}
+#footer .footer .footer-box:nth-child(2) input,
+#footer .footer .footer-box:nth-child(2) button {
+  padding: 10px 8px;
+}
+#footer .footer .footer-box:nth-child(2) p {
+  color: #777777;
+  font-size: 14px;
+}
+#footer .footer .footer-box:nth-child(3) {
+  width: 20%;
+}
+#footer .footer .footer-box:nth-child(3) h2 {
+  color: #fff;
+  font-size: 18px;
+}
+#footer .footer .footer-box:nth-child(3) p {
+  color: #777777;
+}
+#footer .footer .footer-box:nth-child(3) .footer-icon {
+  display: flex;
+  gap: 20px;
+}
+#footer .footer .footer-box:nth-child(3) .footer-icon i {
+  color: #fff;
+}
+
+@media screen and (max-width: 992px) {
+  .container {
+    padding: 0px 32px;
+    margin: 0 auto;
+  }
+  nav #nav-bottom .nav-main .nav-ul {
+    display: none;
+  }
+  nav #nav-bottom .nav-main .nav-menu {
+    display: block;
+  }
+  nav #nav-bottom .nav-main .nav-menu i {
+    color: #fff;
+    cursor: pointer;
+  }
+  #banner {
+    padding-top: 150px;
+    padding-bottom: 50px;
+  }
+  #banner .banner .banner-text {
+    width: 100%;
+  }
+  #services .services {
+    width: 80%;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+  #services .services .services-box {
+    margin-top: 50px;
+  }
+  #services .services .services-box .services-image img {
+    width: 100%;
+  }
+  #features .features {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  #latest #p3 {
+    padding-bottom: 50px;
+  }
+  #latest .latest {
+    width: 80%;
+    margin: 0 auto;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  #latest .latest-box {
+    padding: 20px;
+  }
+  #footer .footer {
+    flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 768px) {
+  #banner {
+    padding-top: 150px;
+    padding-bottom: 50px;
+  }
+  #banner .banner .banner-text {
+    width: 100%;
+  }
+  #banner .banner .banner-text h1 {
+    font-size: 40px;
+  }
+  #services .services {
+    width: 100%;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+  #features h1 {
+    font-size: 40px;
+  }
+  #features #p2 {
+    padding-bottom: 50px;
+  }
+  #features .features {
+    width: 80%;
+    margin: 0 auto;
+    grid-template-columns: 1fr;
+  }
+  #latest #p3 {
+    width: 80%;
+  }
+  #latest .latest {
+    width: 100%;
+    margin: 0 auto;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  #latest .latest .latest-box {
+    padding: 20px;
+  }
+  #latest .latest .latest-box .latest-image img {
+    width: 100%;
+  }
+  #footer .footer {
+    width: 100%;
+    flex-direction: column;
+  }
+  #footer .footer .footer-box:nth-child(1) {
+    width: 100%;
+  }
+  #footer .footer .footer-box:nth-child(2) {
+    width: 100%;
+  }
+  #footer .footer .footer-box:nth-child(3) {
+    width: 100%;
+  }
 }/*# sourceMappingURL=style.css.map */
