--- a/style.scss
+++ b/style.scss
@@ -12,15 +12,17 @@
     margin: 0 auto;
 }
 
-nav{
+nav {
     position: fixed;
     width: 100%;
+    z-index: 1000;
+
     #nav-top {
         padding-bottom: 10px;
         padding-top: 10px;
         background-color: transparent;
         border-bottom: 1px gray solid;
-    
+
         .nav-top {
             display: flex;
             justify-content: space-between;
@@ -28,61 +30,67 @@ nav{
             padding: 6px;
             gap: 30px;
             font-family: Arial, Helvetica, sans-serif;
-    
+
             .nav-top-icon {
                 display: flex;
                 gap: 20px;
                 color: white;
-                font-size: 14px;
+                font-size: 12px;
             }
-    
-            h5 {
+
+            p {
                 color: #fff;
+                font-size: 12px;
             }
         }
     }
-    
+
     #nav-bottom {
-        padding-top: 20px;
-        padding-bottom: 20px;
+        padding-top: 10px;
+        padding-bottom: 10px;
         background-color: transparent;
-    
+
         .nav-main {
             display: flex;
             justify-content: space-between;
             align-items: center;
             gap: 100px;
-    
-    
+
+
             .nav-ul {
                 display: flex;
                 gap: 20px;
                 align-items: center;
                 text-decoration: none;
-    
+
                 a {
                     text-decoration: none;
                     color: white;
-    
+                    font-size: 14px;
+
                     &:hover {
                         text-decoration: underline;
                     }
                 }
             }
+
+            .nav-menu {
+                display: none;
+            }
         }
-    
+
         .nav-main-icon {
             ul {
                 display: flex;
                 gap: 20px;
                 align-items: center;
-    
+
                 li {
                     color: white;
                 }
             }
         }
-    
+
         .nav-bar {
             display: none;
             color: black;
@@ -90,6 +98,7 @@ nav{
         }
     }
 }
+
 #banner {
     padding-top: 200px;
     padding-bottom: 200px;
@@ -103,13 +112,14 @@ nav{
 
         .banner-text {
             width: 70%;
-            h4{
+
+            h4 {
                 color: #fff;
             }
 
             h1 {
-                font-size: 56px;
-                font-weight: 300;
+                font-size: 48px;
+                font-weight: 700;
                 color: #fff;
             }
 
@@ -122,7 +132,7 @@ nav{
 
             .banner-btn {
                 margin-top: 20px;
-                background-color:#fab700 ;
+                background-color: #fab700;
                 cursor: pointer;
                 color: #fff;
                 padding: 10px 0;
@@ -144,18 +154,21 @@ nav{
         }
     }
 }
+
 /* Eklediğiniz class için stiller */
 .scrolled {
     background-color: rgba(0, 0, 0, 0.8);
     /* Diğer stilleri ekleyin */
 }
+
 #services {
     padding-top: 100px;
     padding-bottom: 100px;
     text-align: center;
 
     h1 {
-        font-size: 44px;
+        font-size: 36px;
+        color: #222222;
     }
 
     #p {
@@ -179,7 +192,7 @@ nav{
             }
 
             .services-image {
-                width: 60%;
+                width: 100%;
 
                 .img {
                     width: 100%;
@@ -198,12 +211,411 @@ nav{
                     margin-inline-start: 0px;
                     margin-inline-end: 0px;
                     font-weight: bold;
+                    text-align: left;
                 }
 
                 p {
                     color: #777777;
+                    width: 100%;
+                    text-align: left;
                 }
             }
         }
     }
+}
+
+#features {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-color: #f9f9ff;
+
+    h1 {
+        text-align: center;
+        font-size: 36px;
+    }
+
+    p {
+        text-align: center;
+        color: #777777;
+    }
+
+    .features {
+        margin-top: 50px;
+        display: grid;
+        gap: 30px;
+        grid-template-columns: repeat(3, 1fr);
+
+        .feature-box {
+            background-color: #fff;
+            padding: 20px;
+            transition: all 0.9s ease 0s;
+            cursor: pointer;
+
+            &:hover {
+                background-color: orange;
+                box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+            }
+
+            h2 {
+                font-size: 18px;
+                color: #222222;
+                margin-block-start: 0.83em;
+                margin-block-end: 0.83em;
+                margin-inline-start: 0px;
+                margin-inline-end: 0px;
+                font-weight: bold;
+                text-align: left;
+
+                i {
+                    margin-right: 20px;
+                }
+            }
+
+            p {
+                font-size: 14px;
+                text-align: left;
+            }
+        }
+    }
+}
+
+#latest {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-color: #f9f9ff;
+    h1 {
+        font-size: 36px;
+        text-align: center;
+    }
+
+    #p3 {
+        margin: 0 auto;
+        text-align: center;
+        color: #777777;
+        font-size: 14px;
+        width: 50%;
+        margin-top: 10px;
+    }
+
+    .latest {
+        margin-top: 80px;
+        display: grid;
+        gap: 30px;
+        grid-template-columns: repeat(4, 1fr);
+
+        .latest-box {
+            .latest-image {
+                overflow: hidden;
+
+                img {
+                    transition: all 0.9s ease 0s;
+                }
+
+                &:hover img {
+                    transform: scale(1.2);
+
+                }
+
+            }
+
+            .latest-btn {
+                background-color: black;
+                color: #777777;
+                border: none;
+                padding: 5px 20px;
+                margin-top: 10px;
+            }
+
+            h2 {
+                font-size: 18px;
+                color: #222222;
+                margin-block-start: 0.70em;
+                margin-bottom: 12px;
+                margin-inline-start: 0px;
+                margin-inline-end: 0px;
+                font-weight: bold;
+                text-align: left;
+
+            }
+
+            p {
+                font-size: 14px;
+                color: #777777;
+                margin-bottom: 15px;
+            }
+
+            .latest-comment {
+                display: flex;
+                justify-content: space-between;
+
+                i {
+                    margin-right: 10px;
+                }
+            }
+        }
+    }
+}
+
+#footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-color: #04091e;
+
+    .footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 50px;
+        width: 100%;
+
+        .footer-box {
+            h2 {
+                padding-bottom: 10px;
+            }
+
+            p {
+                padding-bottom: 10px;
+            }
+        }
+
+        .footer-box:nth-child(1) {
+            width: 50%;
+
+            h2 {
+                color: #fff;
+                font-size: 18px;
+            }
+
+            p {
+                color: #777777;
+                font-size: 14px;
+            }
+        }
+
+        .footer-box:nth-child(2) {
+            width: 40%;
+
+            h2 {
+                color: #fff;
+
+                font-size: 18px;
+            }
+
+            input {
+                width: 70%;
+            }
+
+            button {
+                background-color: #fab700;
+                border: none;
+                color: #fff;
+            }
+
+            input,
+            button {
+                padding: 10px 8px;
+            }
+
+            p {
+                color: #777777;
+                font-size: 14px;
+            }
+
+        }
+
+        .footer-box:nth-child(3) {
+            width: 20%;
+
+            h2 {
+                color: #fff;
+
+                font-size: 18px;
+            }
+
+            p {
+                color: #777777;
+            }
+
+            .footer-icon {
+                display: flex;
+                gap: 20px;
+
+                i {
+                    color: #fff;
+                }
+            }
+        }
+
+
+
+
+    }
+}
+
+@media screen and (max-width:992px) {
+    .container {
+        padding: 0px 32px;
+
+        margin: 0 auto;
+    }
+
+    nav {
+        #nav-bottom {
+            .nav-main {
+                .nav-ul {
+                    display: none;
+                }
+
+                .nav-menu {
+                    display: block;
+
+                    i {
+                        color: #fff;
+                        cursor: pointer;
+                    }
+                }
+
+            }
+        }
+    }
+
+    #banner {
+        padding-top: 150px;
+        padding-bottom: 50px;
+
+        .banner {
+            .banner-text {
+                width: 100%;
+
+            }
+        }
+    }
+
+    #services {
+        .services {
+            width: 80%;
+            margin: 0 auto;
+            flex-direction: column;
+
+            .services-box {
+                margin-top: 50px;
+
+                .services-image {
+                    img {
+                        width: 100%;
+                    }
+                }
+            }
+        }
+    }
+
+    #features {
+        .features {
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+
+    #latest {
+        #p3 {
+            padding-bottom: 50px;
+
+        }
+
+        .latest {
+            width: 80%;
+            margin: 0 auto;
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        .latest-box {
+            padding: 20px;
+        }
+    }
+
+    #footer {
+        .footer {
+            flex-wrap: wrap;
+        }
+    }
+
+}
+
+@media screen and (max-width:768px) {
+    #banner {
+        padding-top: 150px;
+        padding-bottom: 50px;
+
+        .banner {
+            .banner-text {
+                width: 100%;
+
+                h1 {
+                    font-size: 40px;
+                }
+
+            }
+        }
+    }
+
+    #services {
+        .services {
+            width: 100%;
+            margin: 0 auto;
+            flex-direction: column;
+        }
+    }
+
+    #features {
+        h1 {
+            font-size: 40px;
+        }
+
+        #p2 {
+            padding-bottom: 50px;
+        }
+
+        .features {
+            width: 80%;
+            margin: 0 auto;
+            grid-template-columns: 1fr;
+        }
+    }
+
+    #latest {
+        #p3{
+            width: 80%;
+        }
+        .latest {
+            width: 100%;
+            margin: 0 auto;
+            grid-template-columns: repeat(1, 1fr);
+
+            .latest-box {
+                padding: 20px;
+                .latest-image{
+                    img{
+                        width: 100%;
+                    }
+                }
+            }
+        }
+
+    }
+
+ #footer {
+        .footer {
+            width: 100%;
+            flex-direction: column;
+            .footer-box:nth-child(1){
+                width: 100%;
+            }
+            .footer-box:nth-child(2){
+                width: 100%;
+            }
+            .footer-box:nth-child(3){
+                width: 100%;
+            }
+        }
+    }
+
 }
