--- a/style.css
+++ b/style.css
@@ -70,6 +70,73 @@ nav #nav-bottom .nav-main .nav-ul a:hover {
 nav #nav-bottom .nav-main .nav-menu {
   display: none;
 }
+nav #nav-bottom .nav-main .hamburger {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+  transition: opacity 0.3s ease;
+}
+nav #nav-bottom .nav-main .hamburger #close-button {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  cursor: pointer;
+  color: white;
+  font-size: 40px;
+}
+nav #nav-bottom .nav-main .hamburger .hamburger-menu {
+  position: absolute;
+  width: 30%;
+  height: 100%;
+  min-width: 200px;
+  background-color: black;
+  list-style: none;
+  padding: 50px;
+  margin: 0;
+  text-align: left;
+}
+nav #nav-bottom .nav-main .hamburger .hamburger-menu li {
+  margin-bottom: 20px;
+}
+nav #nav-bottom .nav-main .hamburger .hamburger-menu li a {
+  color: #f9f9ff;
+  text-decoration: none;
+}
+@keyframes slideInRight {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+@keyframes slideOutRight {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(100%);
+  }
+}
+nav #nav-bottom .nav-main .hamburger-enter {
+  animation: slideInRight 0.3s ease;
+}
+nav #nav-bottom .nav-main .hamburger-enter-active {
+  animation: slideInRight 0.3s ease;
+}
+nav #nav-bottom .nav-main .hamburger-exit {
+  animation: slideOutRight 0.3s ease;
+}
+nav #nav-bottom .nav-main .hamburger-exit-active {
+  animation: slideOutRight 0.3s ease;
+}
 nav #nav-bottom .nav-main-icon ul {
   display: flex;
   gap: 20px;
@@ -383,6 +450,9 @@ nav #nav-bottom .nav-bar {
   nav #nav-bottom .nav-main .nav-menu i {
     color: #fff;
     cursor: pointer;
+  }
+  nav #nav-bottom .nav-main .hamburger {
+    display: block;
   }
   #banner {
     padding-top: 150px;
